// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReplyPage /> should render correctly 1`] = `
<div>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "isAuthenticated": true,
        "userId": "VXNlcjp1c2VyNQo=",
      }
    }
  />
</div>
`;

exports[`<ReplyPage /> should render correctly with profile not enabled 1`] = `
<div>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "isAuthenticated": true,
        "userId": "VXNlcjp1c2VyNQo=",
      }
    }
  />
</div>
`;

exports[`<ReplyPage /> should render correctly with profile not enabled and not authenticated 1`] = `
<div>
  <ReactRelayQueryRenderer
    environment={"RelayModernEnvironment()"}
    query={[Function]}
    render={[Function]}
    variables={
      Object {
        "isAuthenticated": false,
        "userId": "VXNlcjp1c2VyNQo=",
      }
    }
  />
</div>
`;
